Bug fixes based on running FindBugs.