@@ -1,5 +1,5 @@
 /*
- * The Logic Lab 
+ * The Logic Lab
  */
 package com.tll.model.key;
 
@@ -8,7 +8,6 @@ import java.util.Map;
 
 import com.tll.model.EntityUtil;
 import com.tll.model.IEntity;
-import com.tll.model.key.IPrimaryKeyGenerator;
 
 /**
  * MockPrimaryKeyGenerator
@@ -17,14 +16,14 @@ import com.tll.model.key.IPrimaryKeyGenerator;
 public class MockPrimaryKeyGenerator implements IPrimaryKeyGenerator {
 
 	private static final Map<Class<? extends IEntity>, Integer> idMap = new HashMap<Class<? extends IEntity>, Integer>();
-	
+
 	public synchronized Integer generateIdentifier(Class<? extends IEntity> entityClass) {
-		Class<? extends IEntity> rootEntityClass = EntityUtil.getRootEntityClass(entityClass);
+		final Class<? extends IEntity> rootEntityClass = EntityUtil.getRootEntityClass(entityClass);
 		Integer nextId = idMap.get(rootEntityClass);
 		if(nextId == null) {
-			nextId = new Integer(0);
+			nextId = Integer.valueOf(0);
 		}
 		idMap.put(rootEntityClass, ++nextId);
 		return nextId;
-  }
+	}
 }
